[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gymnasium-active-vision"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Niko", email = "niko.konzack@t-online.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/gymnasium-active-vision#readme"
Issues = "https://github.com/unknown/gymnasium-active-vision/issues"
Source = "https://github.com/unknown/gymnasium-active-vision"

[tool.hatch.version]
path = "src/gymnasium_active_vision/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/gymnasium_active_vision tests}"

[tool.coverage.run]
source_pkgs = ["gymnasium_active_vision", "tests"]
branch = true
parallel = true
omit = [
  "src/gymnasium_active_vision/__about__.py",
]

[tool.coverage.paths]
gymnasium_active_vision = ["src/gymnasium_active_vision", "*/gymnasium-active-vision/src/gymnasium_active_vision"]
tests = ["tests", "*/gymnasium-active-vision/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
